--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,7 @@
             classItem: 'myItemClass'
 
         }, function (data, e, ui) {
-            console.log(data, e, ui);
+            //console.log(data, e, ui);
         });
 
         console.log(buttonList);
